TAG: qcreports_db-6-0-0-11
DATE: 08/17/2015
STAFF: lec
CHANGES: 
1) mgd/GXD_Images.py : PLoS One issue

TAG: qcreports_db-6-0-0-10
TAG: qcreports_db-6-0-0-9
DATE: 08/12/2015
STAFF: lec
CHANGES: 
1) fixed jfilescanner link
mgd/MRK_GOIEA.py
mgd/MRK_GORCA.py
mgd/MRK_NoGO.py

TAG: qcreports_db-6-0-0-8
DATE: 08/10/2015
STAFF: lec
CHANGES: TR11979
1) mgd/BIB_RefsToIndex.py

TAG: qcreports_db-6-0-0-7
TAG: qcreports_db-6-0-0-6
DATE: 08/06/2015
STAFF: sc
CHANGES: TR12082
1) added weekly/QTL_Triage.py
2) added above to index page

TAG: qcreports_db-6-0-0-5
DATE: 07/28/2015
STAFF: lec
CHANGES: 
1) TR11750/postgres

TAG: qcreports_db-6-0-0-4
DATE: 07/27/2015
STAFF: lnh
CHANGES:
1) mgd/GO_EvidenceProperty.py: Added a SERVER_TYPE check - only send email when on prod
2) Configuration.default: Added new flag SERVER_TYPE=INSTALL_TYPE

TAG: qcreports_db-6-0-0-3
TAG: qcreports_db-6-0-0-2
TAG: qcreports_db-6-0-0-1
DATE: 07/22/2015, 07/23/2015
STAFF: lec
CHANGES: 
1) TR11750/postgres

TAG: qcreports_db-5-2-2-11
DATE: 7/14/15
STAFF: pf
CHANGES: adding order by to GXD_Mouse_Developmental_Anatomy.rpt

TAG: qcreports_db-5-2-2-10
DATE: 07/14/2015
STAFF: lec
CHANGES: TR11750
change "= null" to "is null" for Postgres support
1) mgd/GO_Combined_Report.py
   mgd/VOC_InvalidInferred.py
   mgd/GXD_AssayInIndexNotInCache.py

TAG: qcreports_db-5-2-2-9
TAG: qcreports_db-5-2-2-8
DATE: 07/10/2015, 07/13/2015
STAFF: lec
CHANGES: TR11332
1) mgd/GO_EvidenceProperty.py

TAG: qcreports_db-5-2-2-7
DATE: 07/06/2015
STAFF: lec
CHANGES: TR11740
1) mgd/GXD_EMAPS_MappingNameChecks.py

TAG: qcreports_db-5-2-2-6
DATE: 6/30/15
STAFF: pf
CHANGES: pirsf updates for postgres

TAG: qcreports_db-5-2-2-5
TAG: qcreports_db-5-2-2-4
DATE: 06/08/2015
STAFF: lnh
CHANGES:
1) Added a new QC report weekly/GO_eco_multipleEvidence.py - TR12045
2) weekly/GO_eco_multipleEvidence.py: Changed python path in the shebang 
           from /usr/bin/env python to /usr/local/bin/python

TAG: qcreports_db-5-2-2-3
TAG: qcreports_db-5-2-2-2