@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-0-12
+DATE: 08/19/2015
+STAFF: lec
+CHANGES: 
+1) mgd/GXD_Images.py : Dis Model Mech
+
 TAG: qcreports_db-6-0-0-11
 DATE: 08/17/2015
 STAFF: lec
